--- a/angular.json
+++ b/angular.json
@@ -26,6 +26,7 @@
                             "src/styles.css"
                         ],
                         "scripts": [
+                            "node_modules/perfect-scrollbar/dist/perfect-scrollbar.min.js",
                             "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
                         ]
                     },
@@ -90,6 +91,7 @@
                             "src/styles.css"
                         ],
                         "scripts": [
+                            "node_modules/perfect-scrollbar/dist/perfect-scrollbar.min.js",
                             "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
                         ]
                     }
