--- a/package.json
+++ b/package.json
@@ -25,12 +25,10 @@
         "ajv": "^6.12.6",
         "bootstrap": "^5.0.0-beta1",
         "bufferutil": "^4.0.3",
-        "fibers": "^5.0.0",
         "html-webpack-plugin": "^4.5.1",
         "ng-packagr": "^11.1.2",
         "ngx-cookie-service": "^11.0.2",
-        "overlayscrollbars": "^1.13.1",
-        "overlayscrollbars-ngx": "^0.2.3",
+        "perfect-scrollbar": "^1.5.0",
         "postcss": "^8.2.4",
         "rxjs": "~6.6.3",
         "tslib": "^2.1.0",
