cleanup + validation added, better footer and compression

--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,11 @@
                         ],
                         "scripts": [
                             "node_modules/perfect-scrollbar/dist/perfect-scrollbar.min.js",
+                            "node_modules/lzutf8/build/production/lzutf8.min.js",
                             "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+                        ],
+                        "allowedCommonJsDependencies": [
+                            "lzutf8"
                         ]
                     },
                     "configurations": {
@@ -92,7 +96,11 @@
                         ],
                         "scripts": [
                             "node_modules/perfect-scrollbar/dist/perfect-scrollbar.min.js",
+                            "node_modules/lzutf8/build/production/lzutf8.min.js",
                             "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+                        ],
+                        "allowedCommonJsDependencies": [
+                            "lzutf8"
                         ]
                     }
                 },
