--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "bootstrap": "^5.0.0-beta1",
         "bufferutil": "^4.0.3",
         "html-webpack-plugin": "^4.5.1",
+        "lzutf8": "^0.6.0",
         "ng-packagr": "^11.1.2",
         "ngx-cookie-service": "^11.0.2",
         "perfect-scrollbar": "^1.5.0",
