--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
     "version": 1,
     "newProjectRoot": "projects",
     "projects": {
-        "angular-page-test": {
+        "genshin-mats": {
             "projectType": "application",
             "schematics": {},
             "root": "",
@@ -67,18 +67,18 @@
                 "serve": {
                     "builder": "@angular-devkit/build-angular:dev-server",
                     "options": {
-                        "browserTarget": "angular-page-test:build"
+                        "browserTarget": "genshin-mats:build"
                     },
                     "configurations": {
                         "production": {
-                            "browserTarget": "angular-page-test:build:production"
+                            "browserTarget": "genshin-mats:build:production"
                         }
                     }
                 },
                 "extract-i18n": {
                     "builder": "@angular-devkit/build-angular:extract-i18n",
                     "options": {
-                        "browserTarget": "angular-page-test:build"
+                        "browserTarget": "genshin-mats:build"
                     }
                 },
                 "test": {
@@ -121,16 +121,16 @@
                     "builder": "@angular-devkit/build-angular:protractor",
                     "options": {
                         "protractorConfig": "e2e/protractor.conf.js",
-                        "devServerTarget": "angular-page-test:serve"
+                        "devServerTarget": "genshin-mats:serve"
                     },
                     "configurations": {
                         "production": {
-                            "devServerTarget": "angular-page-test:serve:production"
+                            "devServerTarget": "genshin-mats:serve:production"
                         }
                     }
                 }
             }
         }
     },
-    "defaultProject": "angular-page-test"
+    "defaultProject": "genshin-mats"
 }
