--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "^13.3.0",
-        "@angular/common": "^13.3.0",
-        "@angular/compiler": "^13.3.0",
-        "@angular/core": "^13.3.0",
-        "@angular/forms": "^13.3.0",
-        "@angular/localize": "^13.3.0",
-        "@angular/platform-browser": "^13.3.0",
-        "@angular/platform-browser-dynamic": "^13.3.0",
-        "@angular/router": "^13.3.0",
-        "@fortawesome/fontawesome-free": "^5.15.2",
-        "@popperjs/core": "^2.6.0",
+        "@angular/animations": "^14.0.4",
+        "@angular/common": "^14.0.4",
+        "@angular/compiler": "^14.0.4",
+        "@angular/core": "^14.0.4",
+        "@angular/forms": "^14.0.4",
+        "@angular/localize": "^14.0.4",
+        "@angular/platform-browser": "^14.0.4",
+        "@angular/platform-browser-dynamic": "^14.0.4",
+        "@angular/router": "^14.0.4",
+        "@fortawesome/fontawesome-free": "^6.1.1",
+        "@popperjs/core": "^2.11.5",
         "ajv": "^6.12.6",
         "bootstrap": "^5.0.0-beta1",
         "bufferutil": "^4.0.3",
@@ -37,14 +37,14 @@
         "zone.js": "~0.11.5"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "~13.3.0",
-        "@angular-eslint/builder": "13.1.0",
-        "@angular-eslint/eslint-plugin": "13.1.0",
-        "@angular-eslint/eslint-plugin-template": "13.1.0",
-        "@angular-eslint/schematics": "13.1.0",
-        "@angular-eslint/template-parser": "13.1.0",
-        "@angular/cli": "~13.3.0",
-        "@angular/compiler-cli": "^13.3.0",
+        "@angular-devkit/build-angular": "^14.0.4",
+        "@angular-eslint/builder": "^14.0.0",
+        "@angular-eslint/eslint-plugin": "^14.0.0",
+        "@angular-eslint/eslint-plugin-template": "^14.0.0",
+        "@angular-eslint/schematics": "^14.0.0",
+        "@angular-eslint/template-parser": "^14.0.0",
+        "@angular/cli": "^14.0.4",
+        "@angular/compiler-cli": "^14.0.4",
         "@types/jasmine": "~3.6.3",
         "@types/node": "^14.14.22",
         "@typescript-eslint/eslint-plugin": "5.11.0",
