--- a/package.json
+++ b/package.json
@@ -37,14 +37,14 @@
         "zone.js": "~0.11.5"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "^14.0.4",
-        "@angular-eslint/builder": "^14.0.0",
-        "@angular-eslint/eslint-plugin": "^14.0.0",
-        "@angular-eslint/eslint-plugin-template": "^14.0.0",
-        "@angular-eslint/schematics": "^14.0.0",
-        "@angular-eslint/template-parser": "^14.0.0",
-        "@angular/cli": "^14.0.4",
-        "@angular/compiler-cli": "^14.0.4",
+        "@angular-devkit/build-angular": "14.0.4",
+        "@angular-eslint/builder": "14.0.0",
+        "@angular-eslint/eslint-plugin": "14.0.0",
+        "@angular-eslint/eslint-plugin-template": "14.0.0",
+        "@angular-eslint/schematics": "14.0.0",
+        "@angular-eslint/template-parser": "14.0.0",
+        "@angular/cli": "14.0.4",
+        "@angular/compiler-cli": "14.0.4",
         "@types/jasmine": "~3.6.3",
         "@types/node": "^14.14.22",
         "@typescript-eslint/eslint-plugin": "5.11.0",
