--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "^14.0.4",
-        "@angular/common": "^14.0.4",
-        "@angular/compiler": "^14.0.4",
-        "@angular/core": "^14.0.4",
-        "@angular/forms": "^14.0.4",
-        "@angular/localize": "^14.0.4",
-        "@angular/platform-browser": "^14.0.4",
-        "@angular/platform-browser-dynamic": "^14.0.4",
-        "@angular/router": "^14.0.4",
+        "@angular/animations": "14.0.0",
+        "@angular/common": "14.0.0",
+        "@angular/compiler": "14.0.0",
+        "@angular/core": "14.0.0",
+        "@angular/forms": "14.0.0",
+        "@angular/localize": "14.0.0",
+        "@angular/platform-browser": "14.0.0",
+        "@angular/platform-browser-dynamic": "14.0.0",
+        "@angular/router": "14.0.0",
         "@fortawesome/fontawesome-free": "^6.1.1",
         "@popperjs/core": "^2.11.5",
         "ajv": "^6.12.6",
@@ -27,8 +27,8 @@
         "bufferutil": "^4.0.3",
         "html-webpack-plugin": "^5.5.0",
         "lzutf8": "^0.6.0",
-        "ng-packagr": "^13.3.0",
-        "ngx-cookie-service": "^13.1.2",
+        "ng-packagr": "14.0.0",
+        "ngx-cookie-service": "14.0.0",
         "perfect-scrollbar": "^1.5.0",
         "postcss": "^8.2.4",
         "rxjs": "~6.6.3",
@@ -37,14 +37,14 @@
         "zone.js": "~0.11.5"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "14.0.4",
+        "@angular-devkit/build-angular": "14.0.0",
         "@angular-eslint/builder": "14.0.0",
         "@angular-eslint/eslint-plugin": "14.0.0",
         "@angular-eslint/eslint-plugin-template": "14.0.0",
         "@angular-eslint/schematics": "14.0.0",
         "@angular-eslint/template-parser": "14.0.0",
-        "@angular/cli": "14.0.4",
-        "@angular/compiler-cli": "14.0.4",
+        "@angular/cli": "14.0.0",
+        "@angular/compiler-cli": "14.0.0",
         "@types/jasmine": "~3.6.3",
         "@types/node": "^14.14.22",
         "@typescript-eslint/eslint-plugin": "5.11.0",
