--- a/angular.json
+++ b/angular.json
@@ -137,6 +137,7 @@
     },
     "defaultProject": "genshin-mats",
     "cli": {
-        "defaultCollection": "@angular-eslint/schematics"
+        "defaultCollection": "@angular-eslint/schematics",
+        "analytics": false
     }
 }
