--- a/package.json
+++ b/package.json
@@ -11,54 +11,54 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "14.0.0",
-        "@angular/common": "14.0.0",
-        "@angular/compiler": "14.0.0",
-        "@angular/core": "14.0.0",
-        "@angular/forms": "14.0.0",
-        "@angular/localize": "14.0.0",
-        "@angular/platform-browser": "14.0.0",
-        "@angular/platform-browser-dynamic": "14.0.0",
-        "@angular/router": "14.0.0",
+        "@angular/animations": "14.0.4",
+        "@angular/common": "14.0.4",
+        "@angular/compiler": "14.0.4",
+        "@angular/core": "14.0.4",
+        "@angular/forms": "14.0.4",
+        "@angular/localize": "14.0.4",
+        "@angular/platform-browser": "14.0.4",
+        "@angular/platform-browser-dynamic": "14.0.4",
+        "@angular/router": "14.0.4",
         "@fortawesome/fontawesome-free": "^6.1.1",
         "@popperjs/core": "^2.11.5",
         "ajv": "^6.12.6",
-        "bootstrap": "^5.0.0-beta1",
-        "bufferutil": "^4.0.3",
+        "bootstrap": "^5.1.3",
+        "bufferutil": "^4.0.6",
         "html-webpack-plugin": "^5.5.0",
-        "lzutf8": "^0.6.0",
-        "ng-packagr": "14.0.0",
-        "ngx-cookie-service": "14.0.0",
-        "perfect-scrollbar": "^1.5.0",
-        "postcss": "^8.2.4",
-        "rxjs": "~6.6.3",
-        "tslib": "^2.1.0",
-        "utf-8-validate": "^5.0.4",
-        "zone.js": "~0.11.5"
+        "lzutf8": "^0.6.2",
+        "ng-packagr": "14.0.2",
+        "ngx-cookie-service": "14.0.1",
+        "perfect-scrollbar": "^1.5.5",
+        "postcss": "^8.4.14",
+        "rxjs": "~7.5.5",
+        "tslib": "^2.4.0",
+        "utf-8-validate": "^5.0.9",
+        "zone.js": "~0.11.6"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "14.0.0",
+        "@angular-devkit/build-angular": "14.0.4",
         "@angular-eslint/builder": "14.0.0",
         "@angular-eslint/eslint-plugin": "14.0.0",
         "@angular-eslint/eslint-plugin-template": "14.0.0",
         "@angular-eslint/schematics": "14.0.0",
         "@angular-eslint/template-parser": "14.0.0",
-        "@angular/cli": "14.0.0",
-        "@angular/compiler-cli": "14.0.0",
-        "@types/jasmine": "~3.6.3",
-        "@types/node": "^14.14.22",
-        "@typescript-eslint/eslint-plugin": "5.11.0",
-        "@typescript-eslint/parser": "5.11.0",
-        "eslint": "^8.2.0",
-        "jasmine-core": "~4.0.1",
-        "jasmine-spec-reporter": "~6.0.0",
-        "karma": "~6.3.17",
-        "karma-chrome-launcher": "~3.1.0",
-        "karma-coverage": "~2.0.3",
-        "karma-jasmine": "~4.0.1",
-        "karma-jasmine-html-reporter": "^1.7.0",
+        "@angular/cli": "14.0.4",
+        "@angular/compiler-cli": "14.0.4",
+        "@types/jasmine": "~4.0.3",
+        "@types/node": "^18.0.0",
+        "@typescript-eslint/eslint-plugin": "^5.11.0",
+        "@typescript-eslint/parser": "^5.11.0",
+        "eslint": "^8.18.0",
+        "jasmine-core": "~4.2.0",
+        "jasmine-spec-reporter": "~7.0.0",
+        "karma": "~6.4.0",
+        "karma-chrome-launcher": "~3.1.1",
+        "karma-coverage": "~2.2.0",
+        "karma-jasmine": "~5.1.0",
+        "karma-jasmine-html-reporter": "^2.0.0",
         "protractor": "~7.0.0",
-        "ts-node": "~9.1.1",
+        "ts-node": "~10.8.1",
         "typescript": "~4.6.2"
     }
 }
