--- a/package.json
+++ b/package.json
@@ -1,64 +1,64 @@
 {
-    "name": "genshin-mats",
-    "version": "3.1.1",
-    "scripts": {
-        "ng": "ng",
-        "start": "ng serve",
-        "build": "ng build",
-        "test": "ng test",
-        "lint": "ng lint",
-        "e2e": "ng e2e"
-    },
-    "private": true,
-    "dependencies": {
-        "@angular/animations": "14.2.6",
-        "@angular/common": "14.2.6",
-        "@angular/compiler": "14.2.6",
-        "@angular/core": "14.2.6",
-        "@angular/forms": "14.2.6",
-        "@angular/localize": "14.2.6",
-        "@angular/platform-browser": "14.2.6",
-        "@angular/platform-browser-dynamic": "14.2.6",
-        "@angular/router": "14.2.6",
-        "@fortawesome/fontawesome-free": "^6.1.1",
-        "@popperjs/core": "^2.11.5",
-        "ajv": "^6.12.6",
-        "bootstrap": "^5.1.3",
-        "bufferutil": "^4.0.6",
-        "html-webpack-plugin": "^5.5.0",
-        "lzutf8": "^0.6.2",
-        "ng-packagr": "14.0.2",
-        "ngx-cookie-service": "14.0.1",
-        "perfect-scrollbar": "^1.5.5",
-        "postcss": "^8.4.14",
-        "rxjs": "~7.5.5",
-        "tslib": "^2.4.0",
-        "utf-8-validate": "^5.0.9",
-        "zone.js": "~0.11.6"
-    },
-    "devDependencies": {
-        "@angular-devkit/build-angular": "14.2.6",
-        "@angular-eslint/builder": "14.1.2",
-        "@angular-eslint/eslint-plugin": "14.1.2",
-        "@angular-eslint/eslint-plugin-template": "14.1.2",
-        "@angular-eslint/schematics": "14.1.2",
-        "@angular-eslint/template-parser": "14.1.2",
-        "@angular/cli": "14.2.6",
-        "@angular/compiler-cli": "14.2.6",
-        "@types/jasmine": "~4.0.3",
-        "@types/node": "^18.0.0",
-        "@typescript-eslint/eslint-plugin": "^5.11.0",
-        "@typescript-eslint/parser": "^5.11.0",
-        "eslint": "^8.25.0",
-        "jasmine-core": "~4.2.0",
-        "jasmine-spec-reporter": "~7.0.0",
-        "karma": "~6.4.0",
-        "karma-chrome-launcher": "~3.1.1",
-        "karma-coverage": "~2.2.0",
-        "karma-jasmine": "~5.1.0",
-        "karma-jasmine-html-reporter": "^2.0.0",
-        "protractor": "~7.0.0",
-        "ts-node": "~10.8.1",
-        "typescript": "~4.6.2"
-    }
+  "name": "genshin-mats",
+  "version": "4.0.1",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "16.2.1",
+    "@angular/common": "16.2.1",
+    "@angular/compiler": "16.2.1",
+    "@angular/core": "16.2.1",
+    "@angular/forms": "16.2.1",
+    "@angular/localize": "16.2.1",
+    "@angular/platform-browser": "16.2.1",
+    "@angular/platform-browser-dynamic": "16.2.1",
+    "@angular/router": "16.2.1",
+    "@fortawesome/fontawesome-free": "^6.1.1",
+    "@popperjs/core": "^2.11.5",
+    "ajv": "^6.12.6",
+    "bootstrap": "^5.1.3",
+    "bufferutil": "^4.0.6",
+    "html-webpack-plugin": "^5.5.0",
+    "lzutf8": "^0.6.2",
+    "ng-packagr": "16.2.0",
+    "ngx-cookie-service": "^16.0.1",
+    "perfect-scrollbar": "^1.5.5",
+    "postcss": "^8.4.14",
+    "rxjs": "~7.5.5",
+    "tslib": "^2.4.0",
+    "utf-8-validate": "^5.0.9",
+    "zone.js": "~0.13.1"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "16.2.0",
+    "@angular-eslint/builder": "^16.1.1",
+    "@angular-eslint/eslint-plugin": "^16.1.1",
+    "@angular-eslint/eslint-plugin-template": "^16.1.1",
+    "@angular-eslint/schematics": "^16.1.1",
+    "@angular-eslint/template-parser": "^16.1.1",
+    "@angular/cli": "16.2.0",
+    "@angular/compiler-cli": "16.2.1",
+    "@types/jasmine": "~4.0.3",
+    "@types/node": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
+    "eslint": "^8.47.0",
+    "jasmine-core": "~4.2.0",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.1.1",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "^2.0.0",
+    "protractor": "~7.0.0",
+    "ts-node": "~10.8.1",
+    "typescript": "^4.9.5"
+  }
 }
