--- a/package.json
+++ b/package.json
@@ -11,40 +11,40 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "16.2.1",
-    "@angular/common": "16.2.1",
-    "@angular/compiler": "16.2.1",
-    "@angular/core": "16.2.1",
-    "@angular/forms": "16.2.1",
-    "@angular/localize": "16.2.1",
-    "@angular/platform-browser": "16.2.1",
-    "@angular/platform-browser-dynamic": "16.2.1",
-    "@angular/router": "16.2.1",
-    "@fortawesome/fontawesome-free": "^6.1.1",
+    "@angular/animations": "17.3.0",
+    "@angular/common": "17.3.0",
+    "@angular/compiler": "17.3.0",
+    "@angular/core": "17.3.0",
+    "@angular/forms": "17.3.0",
+    "@angular/localize": "17.3.0",
+    "@angular/platform-browser": "17.3.0",
+    "@angular/platform-browser-dynamic": "17.3.0",
+    "@angular/router": "17.3.0",
+    "@fortawesome/fontawesome-free": "^6.5.1",
     "@popperjs/core": "^2.11.5",
     "ajv": "^6.12.6",
     "bootstrap": "^5.1.3",
     "bufferutil": "^4.0.6",
     "html-webpack-plugin": "^5.5.0",
     "lzutf8": "^0.6.2",
-    "ng-packagr": "16.2.0",
-    "ngx-cookie-service": "^16.0.1",
+    "ng-packagr": "17.3.0",
+    "ngx-cookie-service": "^17.1.0",
     "perfect-scrollbar": "^1.5.5",
     "postcss": "^8.4.14",
     "rxjs": "~7.5.5",
     "tslib": "^2.4.0",
     "utf-8-validate": "^5.0.9",
-    "zone.js": "~0.13.1"
+    "zone.js": "~0.14.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "16.2.0",
-    "@angular-eslint/builder": "^16.1.1",
-    "@angular-eslint/eslint-plugin": "^16.1.1",
-    "@angular-eslint/eslint-plugin-template": "^16.1.1",
-    "@angular-eslint/schematics": "^16.1.1",
-    "@angular-eslint/template-parser": "^16.1.1",
-    "@angular/cli": "16.2.0",
-    "@angular/compiler-cli": "16.2.1",
+    "@angular-devkit/build-angular": "17.3.0",
+    "@angular-eslint/builder": "^17.3.0",
+    "@angular-eslint/eslint-plugin": "^17.3.0",
+    "@angular-eslint/eslint-plugin-template": "^17.3.0",
+    "@angular-eslint/schematics": "^17.3.0",
+    "@angular-eslint/template-parser": "^17.3.0",
+    "@angular/cli": "17.3.0",
+    "@angular/compiler-cli": "17.3.0",
     "@types/jasmine": "~4.0.3",
     "@types/node": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
@@ -59,6 +59,6 @@
     "karma-jasmine-html-reporter": "^2.0.0",
     "protractor": "~7.0.0",
     "ts-node": "~10.8.1",
-    "typescript": "^4.9.5"
+    "typescript": "5.2"
   }
 }
